# TransformerTTS-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  phonemize.cpp  phonemize.h  predict.cpp  predict.h  preprocess.cpp  preprocess.h  transformer.cpp  transformer.h
include/: audiofile.h  librosa.h
include/Eigen/: nnls.h
include/Eigen/custom/: nnls.h  nnls_mc.h
include/nanosnap/: nanosnap.h
src/: transformer.cpp  transformer.h  utils.cpp  utils.h
